fixing work break on admin page

--- a/omod/src/main/compass/sass/account.scss
+++ b/omod/src/main/compass/sass/account.scss
@@ -38,4 +38,8 @@ form fieldset {
 	width: 50%;
 	margin: 0;
 	margin-top: 20px;
+
+	th {
+		word-break: normal;
+	}
 }
